--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jsibbold:zoomage:1.1.0'
     compile 'com.wdullaer:materialdatetimepicker:3.6.0'
+    compile 'com.itextpdf:itextg:5.5.9'
 }
 
 apply plugin: 'com.google.gms.google-services'
