--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,23 +73,21 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.github.nguyenhoanglam:ImagePicker:1.2.1'
+    //    compile 'com.github.nguyenhoanglam:ImagePicker:1.2.1'
     compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
     compile 'com.github.javiersantos:MaterialStyledDialogs:2.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.github.silvestrpredko:dot-progress-bar:1.1'
-
     // compile 'org.apache.httpcomponents:httpclient:4.5'
-
     compile('org.apache.httpcomponents:httpmime:4.3.6') {
         exclude module: 'httpclient'
     }
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jsibbold:zoomage:1.1.0'
     compile 'com.wdullaer:materialdatetimepicker:3.6.0'
     compile 'com.itextpdf:itextg:5.5.9'
+    implementation project(':imagepicker')
 }
 
 apply plugin: 'com.google.gms.google-services'
